fix wasm look a bit wrt spacing and other stuff

--- a/static/main.css
+++ b/static/main.css
@@ -1,14 +1,16 @@
-/* TODO: this is kind of a temp thing...
- * the real fix will be to fix spacing to match imgui's :(
- */
 body {
-  zoom: 115%;
+    line-height: 1.25em;
+    zoom: 110%;
 }
 
 input {
     box-sizing: border-box;
     padding: 1px 2px;
     border: 0px;
+}
+
+input:not(:focus) {
+    outline: 1px solid black;
 }
 
 /* font ranges cribbed from imgui:
@@ -144,6 +146,7 @@ replaceonhoverhack {
 
 /* this is for right click menus */
 .context_menu {
+    z-index: 9999;
     position: fixed;
 }
 
